@@ -37,6 +37,7 @@
 
 class VAbstractCurve;
 class VSpline;
+class VEllipticalArc;
 
 enum class CurveAngle : char { StartAngle, EndAngle };
 
@@ -47,9 +48,17 @@ public:
     VCurveAngle(const quint32 &id, const quint32 &parentId, const VAbstractCurve *curve, CurveAngle angle);
     VCurveAngle(const quint32 &id, const quint32 &parentId, const QString &baseCurveName, const VSpline &spl,
                 CurveAngle angle, qint32 segment);
-    VCurveAngle(const VCurveAngle &var);
-    VCurveAngle &operator=(const VCurveAngle &var);
-    virtual ~VCurveAngle() Q_DECL_OVERRIDE;
+    virtual ~VCurveAngle() =default;
+protected:
+    VCurveAngle(const quint32 &id, const quint32 &parentId);
+};
+
+class VEllipticalArcRotation : public VCurveAngle
+{
+public:
+    VEllipticalArcRotation();
+    VEllipticalArcRotation(const quint32 &id, const quint32 &parentId, const VEllipticalArc *elArc);
+    virtual ~VEllipticalArcRotation() =default;
 };
 
 #endif // VCURVEANGLE_H
